# 287112

./: 287112 powtórka.cpp  BlackJack.h  CMakeLists.txt  KALKULATOR_H  Opis_projektu.md  README.md  Ruletka.h  blackjack.cpp  blackokno.cpp  blackokno.h  blackokno.ui  gra.h  kalk2  kalkulator z klasą  mainwindow.cpp  mainwindow.h  mainwindow.ui  portfel.cpp  portfel.h  programowanie kalk  programowanie2.cpp  resorces.qrc  ruletka.cpp  ruletkaokno.cpp  ruletkaokno.h  ruletkaokno.ui  statystykiblackjack.h  statystykiruletki.h
Kalkulator_QT/: CMakeLists.txt  CMakeLists.txt.user.aa59da3  kalkulator.cpp  kalkulator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Projekt/: desktop.ini
